added swagger and modularized code
